# vast-parser

./: Cargo.toml  README.md
samples/: sample_stitch_test.xml  sample_vast.xml  sample_wrapper.xml  sample_wrapper_circular.xml  sample_wrapper_nested.xml
src/: error.rs  lib.rs  main.rs  models.rs  parser.rs  stitcher.rs  unwrap.rs
