[package]
name = "vast-parser"
version = "0.1.0"
edition = "2024"
description = "A Rust parser for VAST (Video Ad Serving Template) XML files"

[dependencies]
quick-xml = "0.30.0"  # Fast XML parser
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
thiserror = "1.0"  # Error handling
url = "2.4"  # URL parsing and validation
log = "0.4"  # Logging
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
reqwest = { version = "0.11", features = ["blocking"] }  # HTTP client
